k8s/issuance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuance-service
  namespace: kube-credential
  labels:
    app: issuance-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: issuance-service
  template:
    metadata:
      labels:
        app: issuance-service
    spec:
      containers:
      - name: issuance-service
        image: sahilk21/issuance-service:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: issuance-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  namespace: kube-credential
spec:
  selector:
    app: issuance-service
  ports:
  - port: 3001
    targetPort: 3001
  type: ClusterIP
